Bug 63492 - [Patch] Fix various memory leaks
Summary: [Patch] Fix various memory leaks
Status: RESOLVED FIXED
Alias: None
Product: PolicyKit
Classification: Unclassified
Component: daemon (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: David Zeuthen (not reading bugmail)
QA Contact: David Zeuthen (not reading bugmail)
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-13 01:23 UTC by Miloslav Trmac
Modified: 2013-04-15 12:18 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
0001-Fix-various-memory-leaks.patch (3.68 KB, patch)
2013-04-13 01:24 UTC, Miloslav Trmac
Details | Splinter Review

Description Miloslav Trmac 2013-04-13 01:23:52 UTC

    
Comment 1 Miloslav Trmac 2013-04-13 01:24:29 UTC
Created attachment 77917 [details] [review]
0001-Fix-various-memory-leaks.patch
Comment 2 Miloslav Trmac 2013-04-13 01:27:37 UTC
(The test/mocklibc/src/netgroup.c was also filed what seems to be upstream at http://code.google.com/p/mocklibc/issues/detail?id=2 ).
Comment 3 Colin Walters 2013-04-15 12:17:21 UTC
Comment on attachment 77917 [details] [review]
0001-Fix-various-memory-leaks.patch

Review of attachment 77917 [details] [review]:
-----------------------------------------------------------------

All of these changes look correct to me.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.